# ChangeLog for sys-kernel/lh-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lh-sources-3.4.2 (12 Jun 2012)

  12 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.2.ebuild:
  Version BUmp

*lh-sources-3.4.0 (22 May 2012)

  22 May 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.3.0.ebuild,
  -lh-sources-3.3.2.ebuild, -lh-sources-3.3.3.ebuild, -lh-sources-3.3.4.ebuild,
  +lh-sources-3.4.0.ebuild:
  Drop old, bump version

*lh-sources-3.3.5 (12 May 2012)

  12 May 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.5.ebuild:
  Version BUmp

*lh-sources-3.3.4 (28 Apr 2012)

  28 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.4.ebuild:
  Version Bump

*lh-sources-3.3.3 (23 Apr 2012)

  23 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.3.ebuild:
  Version Bump

*lh-sources-3.3.2 (22 Apr 2012)

  22 Apr 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.3.2.ebuild:
  Version Bump

*lh-sources-3.3.0 (19 Mar 2012)

  19 Mar 2012; Justin Lecher <jlec@gentoo.org> -files/3.2.1-file-caching.patch,
  -files/3.2.2-file-caching.patch, -files/3.2.5-file-caching.patch,
  -files/3.2.6-file-caching.patch, -lh-sources-3.2.1-r2.ebuild,
  -lh-sources-3.2.2.ebuild, -lh-sources-3.2.5.ebuild, +lh-sources-3.3.0.ebuild,
  +files/file-caching.patch, -files/3.2.9-file-caching.patch,
  -lh-sources-3.2.6.ebuild, -lh-sources-3.2.9.ebuild:
  Version Bump

  14 Mar 2012; Justin Lecher <jlec@gentoo.org>
  +files/3.2.11-file-caching.patch, -files/3.1.11-file-caching.patch:
  Correct patch

*lh-sources-3.2.11 (14 Mar 2012)

  14 Mar 2012; Justin Lecher <jlec@gentoo.org>
  +files/3.1.11-file-caching.patch, +lh-sources-3.2.11.ebuild:
  Version Bump

  02 Mar 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.2.9.ebuild:
  get changes from gentoo-sources

*lh-sources-3.2.9 (02 Mar 2012)

  02 Mar 2012; Justin Lecher <jlec@gentoo.org> +files/3.2.9-file-caching.patch,
  +lh-sources-3.2.9.ebuild:
  Version BUmp
