@@ -27,6 +27,8 @@ DIST genpatches-3.4-1.base.tar.bz2 5243 SHA256 7712de2fd86e583bc3625759067150df4
 DIST genpatches-3.4-1.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
 DIST genpatches-3.4-2.base.tar.bz2 53731 SHA256 165de5663fc5f600777744d9614cdfad9a4f96c07e56660f5f956375df2b1053 SHA512 a971ee3b46315da7e6e12d3a7c5a9688c855b7bbff3226cb0d5632e885bc2ec753b83a88667b539dcb73f0d9d96c1f3453c4aeb4a5c4e6dcfe03085556dcc70c WHIRLPOOL f9c7f4283ca2d0fee64791037c135eb0449c47322ea9917eaee5c57b923994e5e890d7dc28f0e325ef0eb5bbb1f83ee3c29d39d48440e92623b2fc6741a357f7
 DIST genpatches-3.4-2.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
+DIST genpatches-3.4-3.base.tar.bz2 54926 SHA256 408a51b8ae19f679f359bf2954c3552f8859aab92b93d45c414864ed20da2026 SHA512 17bb05ba48066a4bab4e52e97350e6f9544a7ed6e99accc6eeb5a42c95cf561869d50c541029273a5f01e77485a7e149e2ce79f414d5ef5d64cae8a1a87f1906 WHIRLPOOL 9ccdfd89543f8f8bbd5c9e9c685c3f62c5f1376e536b5316ebd86687711eb1da87fee5dbec9c8aedad4bf281c727ab406f8ba6202a5c15baebed6b6cabf297b8
+DIST genpatches-3.4-3.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
 DIST linux-3.0.tar.bz2 76753134 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0 SHA512 4a87bba5f62945d226d8c0059d38e6354ad8cd379b8d7936f934a3868a69c6a4c724aad56d974966e8ef1de45f1e0bbe628cb15fc568b6f8cfc63dbc8104bc9d WHIRLPOOL 4bf0a38a623797be81eadaa4b102f9ea1da31edab9aa9e886577bfda79ffd6e105fff702438c2e1350cbb005f9e7594be8e07fe76ad36b1c28ef94184b6edf9f
 DIST linux-3.1.tar.bz2 77190238 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359 SHA512 131b814325d888bb11ba552bc5bdd91ee2d8e139b06ac7ba94e716bcbbcc99ba30867eeea4aab580907916203bc526ae0bccda688151b250ba7943e193e50252 WHIRLPOOL d224dd52c7133e9768817319d0ad0d3797d426180b4d3d936d5189b500521ac4abe4abae7cc71f055d7e5194171f549b6fdb0221ae023cb35b16993741ad1e61
 DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
@@ -37,14 +39,15 @@ EBUILD lh-sources-3.1.10-r1.ebuild 928 SHA256 fdd9928024f2e0ac51e88878b19e8e0a7a
 EBUILD lh-sources-3.2.11.ebuild 934 SHA256 a9a1f1f4547b900278289165014436fee7e06b9b1e997f1d0f6fd3b318d91ca3 SHA512 37060e17574a4b73d0cf25a953f0d0b3420c50115eef7ae8741db9873726733413cd4e344b07d26e5aee785807dd18b7f7d91ed01a1394654e8951e3d227c6d1 WHIRLPOOL c0d814b23668fe7a77124902b0eb2d4c332bc237578f637f0b5b7875d48b3efc461c8269cc81aa14bf8b677155e136e8b2e659615845199b50b4af13f8bd0f92
 EBUILD lh-sources-3.3.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f SHA512 1f22c1c5f5395b83701790b0cfb7aaa2c53a5f10284a8849870bd260a9f4abbfc6973682945d10cfdf33827ac658722a76d1909c0e11b73c75f87fe68a5e3bc0 WHIRLPOOL 22e6e23f480e51767d8876a828a21e9933b000850bc9e58d1ff54af0638cb63d6995f096e9518f554973fbfbfaf9d9667c2a93e9f9718a0e279cf394dbd868d9
 EBUILD lh-sources-3.4.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577 SHA512 de7a52eaeae97540a78ce7dceeaf7caa40ebee7c89abd2bcd5d03bd87392b4ebeeac6c06e0dbda875b493c4d5af66d7001b6ac70585b620bf131726b4a0c2f4c WHIRLPOOL c0b9b4ce7d60b4c92991c51325a79b30d0808c1df1de76d51cca8ffc0b13601b03382bc40724f48e0c23745007d90528da45be753998d75674a4b2c38e212105
+EBUILD lh-sources-3.4.2-r1.ebuild 927 SHA256 61248830d30060260c78b933df128fed2ab6dceb88edd49cfcddf01078eec074 SHA512 355144562aa3d3317ffbf7a190b7fcb3ef0255a2ab7bc037c34c4368df31a25cbb7111ffd347e195748f4ab79bbaff4d0e2bab729979db27793ee411c4577440 WHIRLPOOL f7b115d1dd6631262c153b9ce452a62254d66133b41a7facebf731f0fecce955ed2bd36adef7c6735a6ec8f9301310b881ef366c488cba02fddf2f487a20b502
 EBUILD lh-sources-3.4.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
-MISC ChangeLog 10224 SHA256 c87b1bcad50e692a9fd942343e014068ecedadde81ca680bb3c708744cb5c163 SHA512 7c9ad62361e879818d4d24ad761a88852e8459e74c51ab1080ed2b95af604c8efb12beb6ce1163e03406ef2c7d1e3cbd7067582233335a179804ddd138ba6c6f WHIRLPOOL 563b4c616b8f5ee849b3f580f10f1e8e2992870c2f7c8fc72e137ad7761508c9a4b8526ed7642c6138d4c41e68f031a8754fe685f28f4495a7d447a7936b56e4
+MISC ChangeLog 10352 SHA256 4f0391a4f7a7e90d2a18b8dbe77582874ff45b7bcd9b1d95751f00c4b860bdf5 SHA512 720202cfd829bb5ccb5e4e15505a57ed5b5999a232409dbf265269b45cf0a77aab5a7e7d44841abf240f0249f9bd701ded8632ff7d486701c63b5b5d1fcada2b WHIRLPOOL 358d1bcd3079e8681418bc2d49bd198d5c0424399feea44bb2ce486023deaf988d87c33398de138097dd1673d2437281d9338a4d9430c82aea934e05291e1abf
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/XYkQACgkQgAnW8HDreRYSigCdEU7UJ9goqvq7dWv/WPhknXta
-tqQAnjlh/PFUO85CTX5ZewiIXsoYjMqT
-=+uUe
+iEYEAREKAAYFAk/ZiOgACgkQgAnW8HDreRaB3gCfZiyLO2qIkHbh6FN7f1JcWPme
+7cMAn1Ykym3Tb7wuojm9wYz1G6y52f6u
+=VrVE
 -----END PGP SIGNATURE-----
